kernel/target/thumbv8m.main-none-eabi/debug/build/littlefs2-sys-fd7590767809b097/out/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_cache"][::core::mem::size_of::<lfs_cache>() - 16usize];
    ["Alignment of lfs_cache"][::core::mem::align_of::<lfs_cache>() - 4usize];
    ["Offset of field: lfs_cache::block"][::core::mem::offset_of!(lfs_cache, block) - 0usize];
    ["Offset of field: lfs_cache::off"][::core::mem::offset_of!(lfs_cache, off) - 4usize];
    ["Offset of field: lfs_cache::size"][::core::mem::offset_of!(lfs_cache, size) - 8usize];
    ["Offset of field: lfs_cache::buffer"][::core::mem::offset_of!(lfs_cache, buffer) - 12usize];
};
#[doc = " internal littlefs data structures ///"]
pub type lfs_cache_t = lfs_cache;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_mdir {
    pub pair: [lfs_block_t; 2usize],
    pub rev: u32,
    pub off: lfs_off_t,
    pub etag: u32,
    pub count: u16,
    pub erased: bool,
    pub split: bool,
    pub tail: [lfs_block_t; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_mdir"][::core::mem::size_of::<lfs_mdir>() - 32usize];
    ["Alignment of lfs_mdir"][::core::mem::align_of::<lfs_mdir>() - 4usize];
    ["Offset of field: lfs_mdir::pair"][::core::mem::offset_of!(lfs_mdir, pair) - 0usize];
    ["Offset of field: lfs_mdir::rev"][::core::mem::offset_of!(lfs_mdir, rev) - 8usize];
    ["Offset of field: lfs_mdir::off"][::core::mem::offset_of!(lfs_mdir, off) - 12usize];
    ["Offset of field: lfs_mdir::etag"][::core::mem::offset_of!(lfs_mdir, etag) - 16usize];
    ["Offset of field: lfs_mdir::count"][::core::mem::offset_of!(lfs_mdir, count) - 20usize];
    ["Offset of field: lfs_mdir::erased"][::core::mem::offset_of!(lfs_mdir, erased) - 22usize];
    ["Offset of field: lfs_mdir::split"][::core::mem::offset_of!(lfs_mdir, split) - 23usize];
    ["Offset of field: lfs_mdir::tail"][::core::mem::offset_of!(lfs_mdir, tail) - 24usize];
};
pub type lfs_mdir_t = lfs_mdir;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_dir {
    pub next: *mut lfs_dir,
    pub id: u16,
    pub type_: u8,
    pub m: lfs_mdir_t,
    pub pos: lfs_off_t,
    pub head: [lfs_block_t; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_dir"][::core::mem::size_of::<lfs_dir>() - 52usize];
    ["Alignment of lfs_dir"][::core::mem::align_of::<lfs_dir>() - 4usize];
    ["Offset of field: lfs_dir::next"][::core::mem::offset_of!(lfs_dir, next) - 0usize];
    ["Offset of field: lfs_dir::id"][::core::mem::offset_of!(lfs_dir, id) - 4usize];
    ["Offset of field: lfs_dir::type_"][::core::mem::offset_of!(lfs_dir, type_) - 6usize];
    ["Offset of field: lfs_dir::m"][::core::mem::offset_of!(lfs_dir, m) - 8usize];
    ["Offset of field: lfs_dir::pos"][::core::mem::offset_of!(lfs_dir, pos) - 40usize];
    ["Offset of field: lfs_dir::head"][::core::mem::offset_of!(lfs_dir, head) - 44usize];
};
pub type lfs_dir_t = lfs_dir;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_file {
    pub next: *mut lfs_file,
    pub id: u16,
    pub type_: u8,
    pub m: lfs_mdir_t,
    pub ctz: lfs_file_lfs_ctz,
    pub flags: u32,
    pub pos: lfs_off_t,
    pub block: lfs_block_t,
    pub off: lfs_off_t,
    pub cache: lfs_cache_t,
    pub cfg: *const lfs_file_config,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_file_lfs_ctz {
    pub head: lfs_block_t,
    pub size: lfs_size_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_file_lfs_ctz"][::core::mem::size_of::<lfs_file_lfs_ctz>() - 8usize];
    ["Alignment of lfs_file_lfs_ctz"][::core::mem::align_of::<lfs_file_lfs_ctz>() - 4usize];
    ["Offset of field: lfs_file_lfs_ctz::head"]
        [::core::mem::offset_of!(lfs_file_lfs_ctz, head) - 0usize];
    ["Offset of field: lfs_file_lfs_ctz::size"]
        [::core::mem::offset_of!(lfs_file_lfs_ctz, size) - 4usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_file"][::core::mem::size_of::<lfs_file>() - 84usize];
    ["Alignment of lfs_file"][::core::mem::align_of::<lfs_file>() - 4usize];
    ["Offset of field: lfs_file::next"][::core::mem::offset_of!(lfs_file, next) - 0usize];
    ["Offset of field: lfs_file::id"][::core::mem::offset_of!(lfs_file, id) - 4usize];
    ["Offset of field: lfs_file::type_"][::core::mem::offset_of!(lfs_file, type_) - 6usize];
    ["Offset of field: lfs_file::m"][::core::mem::offset_of!(lfs_file, m) - 8usize];
    ["Offset of field: lfs_file::ctz"][::core::mem::offset_of!(lfs_file, ctz) - 40usize];
    ["Offset of field: lfs_file::flags"][::core::mem::offset_of!(lfs_file, flags) - 48usize];
    ["Offset of field: lfs_file::pos"][::core::mem::offset_of!(lfs_file, pos) - 52usize];
    ["Offset of field: lfs_file::block"][::core::mem::offset_of!(lfs_file, block) - 56usize];
    ["Offset of field: lfs_file::off"][::core::mem::offset_of!(lfs_file, off) - 60usize];
    ["Offset of field: lfs_file::cache"][::core::mem::offset_of!(lfs_file, cache) - 64usize];
    ["Offset of field: lfs_file::cfg"][::core::mem::offset_of!(lfs_file, cfg) - 80usize];
};
pub type lfs_file_t = lfs_file;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_superblock {
    pub version: u32,
    pub block_size: lfs_size_t,
    pub block_count: lfs_size_t,
    pub name_max: lfs_size_t,
    pub file_max: lfs_size_t,
    pub attr_max: lfs_size_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_superblock"][::core::mem::size_of::<lfs_superblock>() - 24usize];
    ["Alignment of lfs_superblock"][::core::mem::align_of::<lfs_superblock>() - 4usize];
    ["Offset of field: lfs_superblock::version"]
        [::core::mem::offset_of!(lfs_superblock, version) - 0usize];
    ["Offset of field: lfs_superblock::block_size"]
        [::core::mem::offset_of!(lfs_superblock, block_size) - 4usize];
    ["Offset of field: lfs_superblock::block_count"]
        [::core::mem::offset_of!(lfs_superblock, block_count) - 8usize];
    ["Offset of field: lfs_superblock::name_max"]
        [::core::mem::offset_of!(lfs_superblock, name_max) - 12usize];
    ["Offset of field: lfs_superblock::file_max"]
        [::core::mem::offset_of!(lfs_superblock, file_max) - 16usize];
    ["Offset of field: lfs_superblock::attr_max"]
        [::core::mem::offset_of!(lfs_superblock, attr_max) - 20usize];
};
pub type lfs_superblock_t = lfs_superblock;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_gstate {
    pub tag: u32,
    pub pair: [lfs_block_t; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_gstate"][::core::mem::size_of::<lfs_gstate>() - 12usize];
    ["Alignment of lfs_gstate"][::core::mem::align_of::<lfs_gstate>() - 4usize];
    ["Offset of field: lfs_gstate::tag"][::core::mem::offset_of!(lfs_gstate, tag) - 0usize];
    ["Offset of field: lfs_gstate::pair"][::core::mem::offset_of!(lfs_gstate, pair) - 4usize];
};
pub type lfs_gstate_t = lfs_gstate;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs {
    pub rcache: lfs_cache_t,
    pub pcache: lfs_cache_t,
    pub root: [lfs_block_t; 2usize],
    pub mlist: *mut lfs_lfs_mlist,
    pub seed: u32,
    pub gstate: lfs_gstate_t,
    pub gdisk: lfs_gstate_t,
    pub gdelta: lfs_gstate_t,
    pub lookahead: lfs_lfs_lookahead,
    pub cfg: *const lfs_config,
    pub block_count: lfs_size_t,
    pub name_max: lfs_size_t,
    pub file_max: lfs_size_t,
    pub attr_max: lfs_size_t,
    pub inline_max: lfs_size_t,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_lfs_mlist {
    pub next: *mut lfs_lfs_mlist,
    pub id: u16,
    pub type_: u8,
    pub m: lfs_mdir_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_lfs_mlist"][::core::mem::size_of::<lfs_lfs_mlist>() - 40usize];
    ["Alignment of lfs_lfs_mlist"][::core::mem::align_of::<lfs_lfs_mlist>() - 4usize];
    ["Offset of field: lfs_lfs_mlist::next"][::core::mem::offset_of!(lfs_lfs_mlist, next) - 0usize];
    ["Offset of field: lfs_lfs_mlist::id"][::core::mem::offset_of!(lfs_lfs_mlist, id) - 4usize];
    ["Offset of field: lfs_lfs_mlist::type_"]
        [::core::mem::offset_of!(lfs_lfs_mlist, type_) - 6usize];
    ["Offset of field: lfs_lfs_mlist::m"][::core::mem::offset_of!(lfs_lfs_mlist, m) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lfs_lfs_lookahead {
    pub start: lfs_block_t,
    pub size: lfs_block_t,
    pub next: lfs_block_t,
    pub ckpoint: lfs_block_t,
    pub buffer: *mut u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs_lfs_lookahead"][::core::mem::size_of::<lfs_lfs_lookahead>() - 20usize];
    ["Alignment of lfs_lfs_lookahead"][::core::mem::align_of::<lfs_lfs_lookahead>() - 4usize];
    ["Offset of field: lfs_lfs_lookahead::start"]
        [::core::mem::offset_of!(lfs_lfs_lookahead, start) - 0usize];
    ["Offset of field: lfs_lfs_lookahead::size"]
        [::core::mem::offset_of!(lfs_lfs_lookahead, size) - 4usize];
    ["Offset of field: lfs_lfs_lookahead::next"]
        [::core::mem::offset_of!(lfs_lfs_lookahead, next) - 8usize];
    ["Offset of field: lfs_lfs_lookahead::ckpoint"]
        [::core::mem::offset_of!(lfs_lfs_lookahead, ckpoint) - 12usize];
    ["Offset of field: lfs_lfs_lookahead::buffer"]
        [::core::mem::offset_of!(lfs_lfs_lookahead, buffer) - 16usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lfs"][::core::mem::size_of::<lfs>() - 128usize];
    ["Alignment of lfs"][::core::mem::align_of::<lfs>() - 4usize];
    ["Offset of field: lfs::rcache"][::core::mem::offset_of!(lfs, rcache) - 0usize];
    ["Offset of field: lfs::pcache"][::core::mem::offset_of!(lfs, pcache) - 16usize];
    ["Offset of field: lfs::root"][::core::mem::offset_of!(lfs, root) - 32usize];
    ["Offset of field: lfs::mlist"][::core::mem::offset_of!(lfs, mlist) - 40usize];
    ["Offset of field: lfs::seed"][::core::mem::offset_of!(lfs, seed) - 44usize];
    ["Offset of field: lfs::gstate"][::core::mem::offset_of!(lfs, gstate) - 48usize];
    ["Offset of field: lfs::gdisk"][::core::mem::offset_of!(lfs, gdisk) - 60usize];
    ["Offset of field: lfs::gdelta"][::core::mem::offset_of!(lfs, gdelta) - 72usize];
    ["Offset of field: lfs::lookahead"][::core::mem::offset_of!(lfs, lookahead) - 84usize];
    ["Offset of field: lfs::cfg"][::core::mem::offset_of!(lfs, cfg) - 104usize];
    ["Offset of field: lfs::block_count"][::core::mem::offset_of!(lfs, block_count) - 108usize];
    ["Offset of field: lfs::name_max"][::core::mem::offset_of!(lfs, name_max) - 112usize];
    ["Offset of field: lfs::file_max"][::core::mem::offset_of!(lfs, file_max) - 116usize];
    ["Offset of field: lfs::attr_max"][::core::mem::offset_of!(lfs, attr_max) - 120usize];
    ["Offset of field: lfs::inline_max"][::core::mem::offset_of!(lfs, inline_max) - 124usize];
};
pub type lfs_t = lfs;
extern "C" {
    pub fn lfs_format(lfs: *mut lfs_t, config: *const lfs_config) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_mount(lfs: *mut lfs_t, config: *const lfs_config) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_unmount(lfs: *mut lfs_t) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_remove(lfs: *mut lfs_t, path: *const ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_rename(
        lfs: *mut lfs_t,
        oldpath: *const ::core::ffi::c_char,
        newpath: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_stat(
        lfs: *mut lfs_t,
        path: *const ::core::ffi::c_char,
        info: *mut lfs_info,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_getattr(
        lfs: *mut lfs_t,
        path: *const ::core::ffi::c_char,
        type_: u8,
        buffer: *mut ::core::ffi::c_void,
        size: lfs_size_t,
    ) -> lfs_ssize_t;
}
